[package]
name = "tumblr_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "~4.1", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "~1.0.103", features = ["serde_derive"] }
serde_json = "~1.0.73"
typed-builder = "0.14"
serde_path_to_error = ">= 0.1.2"  # older (< 4.3.1) oauth2 versions have their minimum serde_path_to_error version too low
