[package]
name = "tumblr_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0.11.2", features = ["json", "multipart"] }
serde = { version = "~1.0.103", features = ["serde_derive"] }
serde_json = "~1.0.73"
typed-builder = "0.14"
thiserror = "~1.0.7"
base64 = "~0.13"
form_urlencoded = "1"
veil = "0.1"
serde-enum-str = "~0.3"
serde_with = ">= 2.0.1"
time = { version = "*", features = ["formatting"] }
async-lock = "2"
