[package]
name = "tumblr_api"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tumblr API client"
readme = "../README.md"
repository = "https://github.com/adrianmgg/tumblr_api"
categories = ["api-bindings", "web-programming::http-client"]
keywords = ["tumblr", "api", "npf"]
exclude = [
	"README.tpl",
]

[features]
default = ["client"]
client = ["api", "npf", "auth", "dep:reqwest", "dep:thiserror", "dep:time"]
api = ["npf", "dep:time", "dep:thiserror"]
auth = ["dep:reqwest", "dep:thiserror", "dep:veil", "dep:async-lock", "dep:serde_with", "dep:serde-enum-str"]
npf = []

[dependencies]
reqwest = { version = "~0.11.2", features = ["json", "multipart"], optional = true }
serde = { version = "~1.0.103", features = ["serde_derive"] }
serde_json = "~1.0.73"
thiserror = { version = "~1.0.7", optional = true }
veil = { version = "0.1", optional = true }
serde-enum-str = { version = "~0.3", optional = true }
serde_with = { version = ">= 2.0.1", optional = true }
time = { version = "0.3", features = ["formatting", "serde"], optional = true }
async-lock = { version = "2", optional = true }
tumblr_api_derive = { path = "../tumblr_api_derive", version = "0.1.0" }

[dev-dependencies]
anyhow = "1.0.72"
tokio = { version = "1.31.0", features = ["full"] }
